codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

  3. gpt-6-luna          Fast and affordable model for easier tasks.
  4. gpt-5.6-sol         Older coding model for complex work.
  5. gpt-5.6-terra       Older balanced model for straightforward work.
  6. gpt-5.6-luna        Older fast and efficient model.
  7. gpt-5.5             Legacy coding model.
  8. gpt-5.4             Strong model for everyday coding.
  9. gpt-5.4-mini        Small, fast, and cost-efficient model for simpler
                         coding tasks.
› 10. gpt-5.2 (current)  Optimized for professional work and long-running
                         agents.

  Press enter to confirm or esc to go back
